tests/dataset/tpc-ds/compiler/c/q59.error
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c: In function ‘test_TPCDS_Q59_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c:184:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  184 |   if (test_TPCDS_Q59_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c:188:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  188 |       if (test_TPCDS_Q59_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c:208:7: warning: implicit declaration of function ‘join_item_list_t_create’ [-Wimplicit-function-declaration]
  208 |       join_item_list_t_create(sales_year1.len * sales_year2.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c:208:42: error: ‘(sales_year1_t *)&sales_year1’ is a pointer; did you mean to use ‘->’?
  208 |       join_item_list_t_create(sales_year1.len * sales_year2.len);
      |                                          ^
      |                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c:208:60: error: ‘(sales_year2_t *)&sales_year2’ is a pointer; did you mean to use ‘->’?
  208 |       join_item_list_t_create(sales_year1.len * sales_year2.len);
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c:224:46: error: incompatible types when initializing type ‘const char * (*)(int,  const char *)’ using type ‘join_item_list_t’
  224 |   const char *(*result)(int, const char *) = join;
      |                                              ^~~~
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c:225:13: warning: passing argument 1 of ‘_json_int’ makes integer from pointer without a cast [-Wint-conversion]
  225 |   _json_int(result);
      |             ^~~~~~
      |             |
      |             const char * (*)(int,  const char *)
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c:62:27: note: expected ‘int’ but argument is of type ‘const char * (*)(int,  const char *)’
   62 | static void _json_int(int v) { printf("%d", v); }
      |                       ~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq593910126640/001/prog.c:226:38: error: incompatible types when assigning to type ‘list_int’ from type ‘const char * (*)(int,  const char *)’
  226 |   test_TPCDS_Q59_simplified_result = result;
      |                                      ^~~~~~
